@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7f73a0c439c99085a213d2c85c326c9cb35fe305 ChangeLog
+SHA1 9fcb55190449e6b6cda963ea5bc61c826965e670 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 eb9fa526314104a41f46cf96a84bb4b74f6bcc40 META.yml
-SHA1 bacc3edae7d091dd380af3a0ace424a96c2d27b1 Makefile.PL
+SHA1 5c8e6ac05fb99e283ed90798b5ac2aa0db711fe2 META.yml
+SHA1 39a9bbcf3ff1c71834573c3ba8a61f0c75e06113 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 f9083a8ef7808251ca64fc90e8e9118208069a7c lib/Net/FullAuto.pm
+SHA1 dfa1c36a49267327547e91333f59d812cc0d0505 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -58,17 +58,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 3a583362943a97eb55780e26a4479d829a405f6b lib/Net/FullAuto/FA_Core.pm
+SHA1 c87baacc77ecaf47a356dce4e690c985096b2b67 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTtWWVAAoJEBa/9Pad787E0uYIAIE2U2/1aDQmdpf7HVJv1zWp
-dvgTJ268PVp7xNVJgH75uJNsdDb1eDpCCydOwPXxzZXCyxp8WtMg9L/3Hiuna/nx
-be6O1rqIAspHJTIQafHxY8r1A2LiJNICFtBRYnW4KgP/UtrYZpmL6dNfZQpGo3kt
-IrxxOBPNVkzYgHAvqsKq+XH+W1AQuhv2FvV48WDr41o5Mv5AmC6nZBtV7U4dh56X
-+WBH4JFoIIMHxAbS9tiBM4qI7moWaghc4PDbLS8nZsDyS/E+I/XoIF8CKsVbReq4
-ngLmbvLgwiqpwk7FwNGeOepOQc8KcRu5kKAj76wnJsMjc62djRG5GaJ/n35weMc=
-=RKJx
+iQEcBAEBAgAGBQJTtYw5AAoJEBa/9Pad787EcpYIALv3MLMIutcYyNzTHEGwgDi3
+c51TgNFrsK9bEwrBxIuA2L7LLSNfZIfZLEjix9+W7o9N1a5vMZahHsv0X5Z5ls7+
+wEZptlTF3XItzKA5jKC5thLzKyY6QlvMUTnqKsH+MfB1xUhSHCZZmnb7iYpWl9TL
+siQ9bhRAGX7n5scEFHVq9N/GCc7bNJsLcatGy7U/rdt4Kv4AzJA8xZ7wO2ultJy5
+IzQiRW7KdwVG8iyljWmUfX+ZMhFOK+7CWxHOkRJpD4zzgy66z79WU9X6EJb0Y7dg
+BlWfxL1VVZljkCWhEc36zO+xky0qNLuvuAp5EyIgkWzD2ynajHSW1TW8mDGhOkI=
+=MAQT
 -----END PGP SIGNATURE-----
