@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999933';
+our $VERSION='0.9999999935';
 
 
 use 5.005;
